--- a/src/css/QuizQuestion.css
+++ b/src/css/QuizQuestion.css
@@ -61,6 +61,10 @@
   margin-left: 700px;
 }
 
+.exit-button {
+  margin-top: 20px;
+}
+
 @media (max-width: 850px) {
   .counter {
     position: relative;
