--- a/src/css/QuizQuestion.scss
+++ b/src/css/QuizQuestion.scss
@@ -62,6 +62,10 @@
     margin-left: 700px;
 }
 
+.exit-button {
+    margin-top: 20px;
+}
+
 @media(max-width: 850px){
     .counter {
         position: relative;
